[gd_scene load_steps=25 format=3 uid="uid://cno0j53ottrgj"]

[ext_resource type="Script" uid="uid://bmbvova1tm3y8" path="res://controllers/player/player.gd" id="1_icig3"]
[ext_resource type="Script" uid="uid://2j0ubpg0qevr" path="res://ui/debug/gui.gd" id="2_u54hw"]
[ext_resource type="Theme" uid="uid://b28fy0uaom4ds" path="res://ui/themes/debug.tres" id="3_fh6gg"]
[ext_resource type="Script" uid="uid://sv4ikmsp6nik" path="res://ui/debug/debug.gd" id="4_bn7gw"]
[ext_resource type="Script" uid="uid://c1csw7q0gomdp" path="res://core/state_machine/state_machine.gd" id="5_a1kld"]
[ext_resource type="Script" uid="uid://c70m5pqrvihff" path="res://controllers/player/movement_states/idle.gd" id="6_6e1eu"]
[ext_resource type="Script" uid="uid://6qifdlt057ir" path="res://controllers/player/movement_states/walk.gd" id="7_afx4e"]
[ext_resource type="Script" uid="uid://npgarjqdwdf6" path="res://controllers/player/movement_states/sprint.gd" id="8_40vpa"]
[ext_resource type="Script" uid="uid://bb1ogkg56vx5s" path="res://controllers/player/movement_states/crouch.gd" id="9_qdb0h"]
[ext_resource type="Script" uid="uid://d0igha5eqiup3" path="res://controllers/player/movement_states/jump.gd" id="10_fy606"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_74qjk"]
resource_local_to_scene = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rk4xh"]
albedo_color = Color(0.847059, 0.0862745, 0, 1)
roughness = 0.32
emission = Color(0.188235, 0.254902, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gf80s"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_rk4xh")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uovkr"]
resource_local_to_scene = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uovkr"]
transparency = 1
albedo_color = Color(0.23137255, 0.21960784, 0.9411765, 0.3529412)
roughness = 0.32
emission = Color(0.188235, 0.254902, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l8yvu"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_uovkr")

[sub_resource type="SphereShape3D" id="SphereShape3D_ca8e7"]

[sub_resource type="GDScript" id="GDScript_271ko"]
script/source = "extends ShapeCast3D

signal collision_state_changed(is_colliding: bool)

var _was_colliding: bool = false

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.

func _physics_process(delta: float) -> void:
	# Ensure we update the cast
	# force_shapecast_update()
	var is_colliding_now = is_colliding()
	if is_colliding_now != _was_colliding:
		_was_colliding = is_colliding_now
		collision_state_changed.emit(is_colliding_now)
"

[sub_resource type="CylinderMesh" id="CylinderMesh_gshig"]
top_radius = 0.02
bottom_radius = 0.02

[sub_resource type="Animation" id="Animation_ca8e7"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualCollider:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualCollider:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VisualCollider/PlaceholderMesh:mesh:height")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameCharacterBody3D/GameCollider:shape:height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GameCharacterBody3D/GameCollider:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GameCharacterBody3D/GameCollider/PlaceholderMesh:mesh:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}

[sub_resource type="Animation" id="Animation_xc2pf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualCollider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualCollider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VisualCollider/PlaceholderMesh:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CameraController/Camera3D:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CameraController/Camera3D:position:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("GameCharacterBody3D/GameCollider:shape:height")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("GameCharacterBody3D/GameCollider:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("GameCharacterBody3D/GameCollider/PlaceholderMesh:mesh:height")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_rk4xh"]
resource_name = "Sprinting"
length = 1.2
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2, 2, 0),
"points": PackedFloat32Array(0, -0.24999705, -0.0003833605, 0.16666667, 0.00025557668, 0.065, -0.050000004, -0.0075688055, 0.03333333, 0.00504587, 0.07568805, -0.099999994, 0.010833293, 0.0820642, -0.008890255, -0.065, -0.050000004, 0.015068807, 0.03333333, -0.010045869, -0.075, -0.0920881, -0.011006969, 0.06666672, 0.007968441, 0, -0.028262239, -0.011402661, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2, 2, 2),
"points": PackedFloat32Array(0, -0.24999978, -4.8367594e-05, 0.1, 1.9347055e-05, 0.066, -0.10000001, -3.671646e-05, 0.14082322, 5.1705294e-05, -0.036, -0.08347858, 0.004914776, 0.100000024, -0.005887471, 0.066, -0.100008845, 2.203183e-05, 0.16666663, -3.671646e-05, -0.036, -0.06666666, 0.0043915585, 0.09942785, -0.006549648, 0, -0.06666672, -0.0002969308, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_jdr2h"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2, 3, 3, 3),
"points": PackedFloat32Array(0, 0, 0, 0.22688578, 5.0380302e-05, -0.015, -0.20644772, 0.00030516915, 0.22688574, -0.00033538043, 0.00038575847, -0.24014461, 0.00033537816, 0.24014461, -0.00033537816, 0.015, -0.21968687, -0.00033538043, 0.21968687, 0.00033538043, -0.00028499798, -0.23133409, 5.820766e-11, 0.23133409, -5.820766e-11),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 3, 0, 3, 2),
"points": PackedFloat32Array(1.5, -0.19298339, -0.009623969, 0.2, 0.009973884, 1.5496452, -0.23333335, 9.179115e-05, 0.23333335, -9.179115e-05, 1.4997495, -0.19999999, 0.010224342, 0.20000005, 0.0103081465, 1.5498621, -0.23333335, -5.722046e-05, 0.23333335, 5.722046e-05, 1.5001833, -0.20000005, 0.009622812, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xc2pf"]
_data = {
&"Crouch": SubResource("Animation_ca8e7"),
&"RESET": SubResource("Animation_xc2pf"),
&"Sprinting": SubResource("Animation_rk4xh"),
&"Walking": SubResource("Animation_jdr2h")
}

[node name="FPSController" type="CharacterBody3D"]
slide_on_ceiling = false
script = ExtResource("1_icig3")

[node name="VisualCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_74qjk")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="VisualCollider"]
mesh = SubResource("CapsuleMesh_gf80s")

[node name="GameCharacterBody3D" type="CharacterBody3D" parent="."]
top_level = true

[node name="GameCollider" type="CollisionShape3D" parent="GameCharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uovkr")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="GameCharacterBody3D/GameCollider"]
mesh = SubResource("CapsuleMesh_l8yvu")

[node name="CrouchShapeCast3D" type="ShapeCast3D" parent="GameCharacterBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_ca8e7")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 0.8586215, 0, 1)
script = SubResource("GDScript_271ko")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
unique_name_in_owner = true

[node name="LineOfSightMesh" type="MeshInstance3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.3711385e-08, 0.99999994, 0, -0.99999994, -4.3711385e-08, 0, 0, -1)
mesh = SubResource("CylinderMesh_gshig")
skeleton = NodePath("../../..")

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1

[node name="DeltaPos" type="ColorRect" parent="CameraController/Camera3D"]
offset_left = 336.0
offset_right = 376.0
offset_bottom = 40.0

[node name="DeltaVel" type="ColorRect" parent="CameraController/Camera3D"]
offset_left = 336.0
offset_top = 48.0
offset_right = 376.0
offset_bottom = 88.0

[node name="InputBuffer" type="Label" parent="CameraController/Camera3D"]
offset_left = 384.0
offset_right = 594.0
offset_bottom = 201.0

[node name="ThirdPersonCamera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.9261671, 0.3771135, 0, -0.3771135, 0.9261671, 0, 1.4404721, 2.607768)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_xc2pf")
}

[node name="GUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_u54hw")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 298.0
offset_bottom = 123.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 200

[node name="DebugPanel" type="PanelContainer" parent="GUI/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("3_fh6gg")
script = ExtResource("4_bn7gw")

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer/MarginContainer/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChatEdit" type="LineEdit" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Press enter to send chat"

[node name="RepeatActionsButton" type="Button" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Repeat Actions
"

[node name="ExitToMenuButton" type="Button" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit to Menu"

[node name="QuitButton" type="Button" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="ChatMessagePrototype" type="Label" parent="GUI/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "test
"

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 31)
layout_mode = 2

[node name="ChatVBox" type="VBoxContainer" parent="GUI/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_a1kld")
CURRENT_STATE = NodePath("WalkMovementState")
DEBUG_NAME = "Movement State"

[node name="IdleMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("6_6e1eu")
metadata/_custom_type_script = "uid://8ywkt0fgrttk"

[node name="WalkMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("7_afx4e")
SPEED = 2.0
ACCELERATION = 0.075
metadata/_custom_type_script = "uid://8ywkt0fgrttk"

[node name="SprintMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("8_40vpa")
SPEED = 5.0
metadata/_custom_type_script = "uid://8ywkt0fgrttk"

[node name="CrouchMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("9_qdb0h")
SPEED = 1.5
ACCELERATION = 0.1
metadata/_custom_type_script = "uid://q8ak1eaayjdy"

[node name="JumpMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("10_fy606")
SPEED = 4.0
ACCELERATION = 0.015
metadata/_custom_type_script = "uid://q8ak1eaayjdy"

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="text_submitted" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/ChatEdit" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_chat_edit_text_submitted"]
[connection signal="toggled" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/RepeatActionsButton" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_repeat_actions_button_toggled"]
[connection signal="pressed" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/ExitToMenuButton" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_exit_to_menu_button_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/QuitButton" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_quit_button_pressed"]
